--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6180,6 +6180,11 @@
    <string name="imei_information_title">IMEI information</string>
    <string name="imei_information_summary">IMEI relative information</string>
    <string name="slot_number">(Slot<xliff:g id="slot_num">%1$d</xliff:g>)</string>
+   <string name="usb_sdcard_summary">Lets you transfer media files in the SD card on computer</string>
+   <string name="usb_sdcard_title">Mount SD card</string>
+   <string name="external_storage_turn_on">External storage has been turned on</string>
+   <string name="external_storage_turn_off">External storage has been turned off</string>
+
     <!-- SuperSU header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
     <string name="supersu_title">SuperSU</string>
     <!-- Advanced reboot options -->
@@ -6249,4 +6254,30 @@
      <string name="status_bar_battery_percentage_default">Hidden (default)</string>
      <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
      <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
+
+    <!-- WiFi Ad-Hoc mode -->
+    <!-- Checkbox title for option to Automatically manage Wi\u2011Fi  [CHAR LIMIT=40] -->
+    <string name="wifi_automatically_manage_title">Automatically manage Wi\u2011Fi</string>
+    <string name="wifi_mode">Mode</string>
+    <string name="wifi_mode_ibss">Ad-Hoc (IBSS) Network</string>
+    <string name="wifi_mode_ibss_short">Ad-Hoc</string>
+
+    <string name="wifi_ibss_freq_title">Channel / Frequency</string>
+    <string name="wifi_channel">Channel</string>
+    <string name="wifi_mhz">MHz</string>
+
+    <!-- Navigation Bar -->
+    <string name="navigation_bar_title">Navigation bar</string>
+
+    <!-- Navigation Bar Height -->
+    <string name="navigation_bar_height">Height</string>
+    <string name="navigation_bar_height_48">48dp (default)</string>
+    <string name="navigation_bar_height_44">44dp</string>
+    <string name="navigation_bar_height_40">40dp</string>
+    <string name="navigation_bar_height_36">36dp</string>
+    <string name="navigation_bar_height_32">32dp</string>
+    <string name="navigation_bar_height_28">28dp</string>
+    <string name="navigation_bar_height_24">24dp</string>
+    <string name="navigation_bar_height_20">20dp</string>
+    <string name="navigation_bar_height_0">0dp (hide)</string>
 </resources>
