Build Date Version for EF-Aosp
Change-Id: I0b05b13f769421328e163bdcb50357e662e8704b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6185,4 +6185,9 @@
     <!-- Advanced reboot options -->
     <string name="advanced_reboot_title">Advanced reboot</string>
     <string name="advanced_reboot_summary">When unlocked, include options in the power menu for rebooting into recovery, bootloader or performing a soft reboot</string>
+
+ <!-- EF-Aosp build date-->
+   <string name="build_date">Ef-Aosp build date</string>
+   <string name="build_date_default">2014-01-01-0000</string>
+
 </resources>
