Battery text mode (2/2) PS5: More configuration PS7: Rebased and changed topic
Change-Id: Id3f33682ac32a1d6ba05dd5c4ba534a9939dda0d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6230,4 +6230,10 @@
     <string name="lcd_density_default_value_format">%d DPI (default)</string>
     <string name="restarting_ui">Restarting UI\u2026</string>
 
+  <!-- Battery percentage -->
+    <string name="status_bar_battery_percentage_title">Show battery percentage</string>
+    <string name="status_bar_battery_percentage_dialog_title">Battery percentage</string>
+    <string name="status_bar_battery_percentage_default">Hidden (default)</string>
+    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
+    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
 </resources>
