--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6230,10 +6230,18 @@
     <string name="lcd_density_default_value_format">%d DPI (default)</string>
     <string name="restarting_ui">Restarting UI\u2026</string>
 
-  <!-- Battery percentage -->
-    <string name="status_bar_battery_percentage_title">Show battery percentage</string>
-    <string name="status_bar_battery_percentage_dialog_title">Battery percentage</string>
-    <string name="status_bar_battery_percentage_default">Hidden (default)</string>
-    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
-    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
+    <!-- Status bar - Battery -->
+    <string name="status_bar_battery_style_title">Battery status style</string>
+    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
+    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
+    <string name="status_bar_battery_style_circle">Circle</string>
+    <string name="status_bar_battery_style_text">Text</string>
+    <string name="status_bar_battery_style_hidden">Hidden</string>
+
+    <!-- Status bar - Battery percentage -->
+     <string name="status_bar_battery_percentage_title">Show battery percentage</string>
+     <string name="status_bar_battery_percentage_dialog_title">Battery percentage</string>
+     <string name="status_bar_battery_percentage_default">Hidden (default)</string>
+     <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
+     <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
 </resources>
