Final fix for Battery Settings Into date and time section, but is a start point
Change-Id: Ia1589dc3bee0481ab538350889645f2a2765dbe8

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6231,9 +6231,10 @@
     <string name="restarting_ui">Restarting UI\u2026</string>
 
     <!-- Status bar - Battery Settings -->
-    <string name="status_bar_general_category">General</string>
+    <string name="status_bar_general_category">Battery</string>
     <string name="status_bar_title">Battery Settings</string>
 
+    <!-- Status bar - Style -->
     <string name="status_bar_battery_style_title">Battery status style</string>
     <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
     <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
