--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6260,7 +6260,7 @@
     <string name="navigation_bar_title">Navigation bar</string>
 
     <!-- Navigation Bar Height -->
-    <string name="navigation_bar_height">Height</string>
+    <string name="navigation_bar_height">Navigation Bar Height</string>
     <string name="navigation_bar_height_48">48dp (default)</string>
     <string name="navigation_bar_height_44">44dp</string>
     <string name="navigation_bar_height_40">40dp</string>
