Add section and settings for MotoDoze Commit inspired from @Danesh https://github.com/CyanogenMod/android_packages_apps_Settings/commit/1b0a43c39c9d3d7edfe2b0bb0a1a096873a74afc
Change-Id: I9bccbcd982502cff5636df9789a7b7ce177d4a44

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6270,4 +6270,8 @@
     <string name="navigation_bar_height_24">24dp</string>
     <string name="navigation_bar_height_20">20dp</string>
     <string name="navigation_bar_height_0">0dp (hide)</string>
+
+    <!-- Gesture Settings -->
+    <!-- Settings main menu entry -->
+    <string name="gesture_settings_title">Gestures</string>
 </resources>
